only update on change; fix infinite loop on zero length zip; hide scrollbars in chrome

--- a/bin/index.css
+++ b/bin/index.css
@@ -50,6 +50,12 @@ svg text {
     scrollbar-width: none;
 }
 
+#code::-webkit-scrollbar, #conv::-webkit-scrollbar, .cm-scroller::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
+}
+
 .cm-editor {
     height: 100%;
 }
